Move old AC solver to the corresponding app

--- a/apps/ACvsBC/Makefile
+++ b/apps/ACvsBC/Makefile
@@ -1,6 +1,6 @@
 # Naxos Directory
 NAXOS = ../../core/bounds-consistency
-NAXOS_AC = ../../core/arc-consistency
+NAXOS_AC = core-arc-consistency
 
 # Compiler Options
 CXX      = $(CPATH)g++
