--- a/apps/hadoop/CMakeLists.txt
+++ b/apps/hadoop/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 2.6)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic -Wall -W -Wshadow -Werror -std=c++0x -O2 $ENV{COVERAGE}")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -s $ENV{COVERAGE}")
 
-include_directories(../../core/bounds-consistency)
-add_subdirectory(../../core/bounds-consistency ../../core/bounds-consistency)
+include_directories(../../core)
+add_subdirectory(../../core ../../core)
 
 add_executable(nqueens nqueens.cpp)
 target_link_libraries(nqueens naxos)
