--- a/apps/XCSP3/CMakeLists.txt
+++ b/apps/XCSP3/CMakeLists.txt
@@ -24,5 +24,14 @@ add_executable(naxos-xcsp3 naxos-xcsp3.cpp)
 target_link_libraries(naxos-xcsp3 naxos parserxcsp3core)
 add_dependencies(naxos-xcsp3 XCSP3-CPP-Parser)
 
+file(DOWNLOAD
+     https://raw.githubusercontent.com/philsquared/Catch/master/single_include/catch.hpp
+     ./catch.hpp)
+
+add_executable(naxos-xcsp3-test naxos-xcsp3-test.cpp)
+target_link_libraries(naxos-xcsp3-test naxos parserxcsp3core)
+add_dependencies(naxos-xcsp3-test XCSP3-CPP-Parser)
+
 enable_testing()
 add_test(verification verification.sh)
+add_test(naxos-xcsp3-test naxos-xcsp3-test)
