Integrate parser example

--- a/apps/XCSP3/CMakeLists.txt
+++ b/apps/XCSP3/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.6)
 set(CMAKE_CXX_FLAGS
-    "${CMAKE_CXX_FLAGS} -pedantic -Wall -W -Wshadow -Werror -std=c++0x -O2 $ENV{COVERAGE}")
+    "${CMAKE_CXX_FLAGS} -pedantic -Wall -W -Wshadow -std=c++0x -O2 $ENV{COVERAGE}")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -s $ENV{COVERAGE}")
 
 include_directories(../../core)
@@ -20,8 +20,12 @@ add_library(parserxcsp3core STATIC IMPORTED)
 set_target_properties(parserxcsp3core PROPERTIES IMPORTED_LOCATION
                       parser/src/XCSP3-CPP-Parser/lib/libparserxcsp3core.a)
 
+include(FindLibXml2)
+include_directories(SYSTEM ${LIBXML2_INCLUDE_DIR}
+                    parser/src/XCSP3-CPP-Parser/include)
+
 add_executable(naxos-xcsp3 naxos-xcsp3.cpp)
-target_link_libraries(naxos-xcsp3 naxos parserxcsp3core)
+target_link_libraries(naxos-xcsp3 naxos ${LIBXML2_LIBRARIES} parserxcsp3core)
 add_dependencies(naxos-xcsp3 XCSP3-CPP-Parser)
 
 file(DOWNLOAD
