Create placeholder for non mini-solver expressions

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -3,4 +3,4 @@ add_library(naxos-mini array_constraints.cpp bitset_domain.cpp expressions.cpp
 
 add_library(naxos array_constraints.cpp bitset_domain.cpp expressions.cpp
             intvar.cpp problemmanager.cpp var_constraints.cpp
-            non_mini_solver_constraints.cpp)
+            non_mini_solver_expressions.cpp non_mini_solver_constraints.cpp)
