--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ matrix:
             - valgrind
             - clang-format-5.0
       before_script:
-        - CXX=g++-7
+        - CXX="g++-7"
         - $CXX --version
 
     - env: DIRECTORY="apps/CELAR/"
